--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 %html
   %head
     %title Brandizzle    
-    = stylesheet_link_tag 'compiled/screen.css', 'formtastic', 'formtastic_changes', :media => 'screen, projection'
+    = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
     /[if lt IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
@@ -11,11 +11,11 @@
     = yield :head
   %body.bp
     = render "shared/header"
-    #main-content.container
+    #bd
       #flash
         - flash.each do |key, message|
           %div.flash(id=key)
             =h message
-      #page
+      #main-content
         = yield
     = render "shared/footer"
