--- a/app/stylesheets/partials/_brands.sass
+++ b/app/stylesheets/partials/_brands.sass
@@ -1,2 +1,10 @@
-.back_link
-  :float right
+body.bp
+  .back_link
+    :float right
+  #settings, #queries
+    +column(17, true)
+    :border 1px solid #ccc
+    :padding 10px
+    :margin 0 0 10px 10px
+  #terms
+    +no-bullets
