--- a/app/views/brands/new.html.haml
+++ b/app/views/brands/new.html.haml
@@ -1,19 +1,23 @@
-.grid_6
-  %h2 Add brand
+#sidebar
+  %h3 Monitored brands
+  %ul
+    - @brands.each do |brand|
+      %li= link_to h(brand.name), "#"
 
-.grid_6.right
-  #actions
-    = link_to "Go back", brand_results_path
-.clear
+#content
+  .span-9
+    %h3 Add brand
+  .span-9.last.right
+    = link_to "Go back", brands_path
+  .clear
 
-.grid_6
-  - form_for @brand do |f|
-    %fieldset
-      %legend Brand
-      = render :partial => 'fields', :locals => { :f => f }
-
-      %p
-        = f.submit 'Create'
+  #settings
+    %h4 Settings
+    - semantic_form_for @brand do |f|
+      - f.inputs do
+        = f.input :name
+      - f.buttons do
+        = f.commit_button 'Create'
 
 - content_for :head do
   :javascript
