--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -369,9 +369,25 @@ body.bp .pagination {
     #results td.controls a:hover {
       text-decoration: underline; }
 
-/* line 1, ../../../app/stylesheets/partials/_brands.sass */
-.back_link {
+/* line 2, ../../../app/stylesheets/partials/_brands.sass */
+body.bp .back_link {
   float: right; }
+/* line 4, ../../../app/stylesheets/partials/_brands.sass */
+body.bp #settings, body.bp #queries {
+  display: inline;
+  float: left;
+  margin-right: 0;
+  width: 660px;
+  border: 1px solid #ccc;
+  padding: 10px;
+  margin: 0 0 10px 10px; }
+  /* line 101, ../../../../../../../.rvm/gems/ruby-1.8.7-p249/gems/compass-0.8.17/frameworks/blueprint/stylesheets/blueprint/modules/_grid.sass */
+  * html body.bp #settings, * html body.bp #queries {
+    overflow-x: hidden; }
+/* line 8, ../../../../../../../.rvm/gems/ruby-1.8.7-p249/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/lists/_bullets.sass */
+body.bp #terms li {
+  list-style-type: none;
+  margin-left: 0px; }
 
 /* line 141, ../../../app/stylesheets/partials/_formtastic_base.sass */
 body.bp .formtastic ul, body.bp .formtastic ol, body.bp .formtastic legend, body.bp .formtastic p {
