modified brands index page and fixed ie layout

--- a/app/stylesheets/partials/_brands.sass
+++ b/app/stylesheets/partials/_brands.sass
@@ -1,10 +1,12 @@
 body.bp
-  .back_link
-    :float right
   #settings, #queries
     +column(17, true)
     :border 1px solid #ccc
     :padding 10px
     :margin 0 0 10px 10px
-  #terms
+  #brands, #terms
     +no-bullets
+  #brands
+    :margin-left 20px
+    #terms
+      :margin-left 20px
