--- a/app/views/brands/edit.html.haml
+++ b/app/views/brands/edit.html.haml
@@ -7,9 +7,9 @@
       %li= link_to h(brand.name), edit_brand_path(brand)
 
 #content
-  .span-9
+  .span-12
     %h3="Edit #{@brand.name} brand"
-  .span-9.last
+  .span-6.last.right
     = link_to "Go back", brands_path, :class => "back_link"
   .clear
   
