--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,9 +1,10 @@
+!!!
 %html
   %head
     %title Brandizzle    
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'compiled/print.css', :media => 'print'
-    /[if lt IE 8]
+    /[if lte IE 8]
       = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
     
     
