--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -370,9 +370,6 @@ body.bp .pagination {
       text-decoration: underline; }
 
 /* line 2, ../../../app/stylesheets/partials/_brands.sass */
-body.bp .back_link {
-  float: right; }
-/* line 4, ../../../app/stylesheets/partials/_brands.sass */
 body.bp #settings, body.bp #queries {
   display: inline;
   float: left;
@@ -385,9 +382,15 @@ body.bp #settings, body.bp #queries {
   * html body.bp #settings, * html body.bp #queries {
     overflow-x: hidden; }
 /* line 8, ../../../../../../../.rvm/gems/ruby-1.8.7-p249/gems/compass-0.8.17/frameworks/compass/stylesheets/compass/utilities/lists/_bullets.sass */
-body.bp #terms li {
+body.bp #brands li, body.bp #terms li {
   list-style-type: none;
   margin-left: 0px; }
+/* line 9, ../../../app/stylesheets/partials/_brands.sass */
+body.bp #brands {
+  margin-left: 20px; }
+  /* line 11, ../../../app/stylesheets/partials/_brands.sass */
+  body.bp #brands #terms {
+    margin-left: 20px; }
 
 /* line 141, ../../../app/stylesheets/partials/_formtastic_base.sass */
 body.bp .formtastic ul, body.bp .formtastic ol, body.bp .formtastic legend, body.bp .formtastic p {
@@ -829,7 +832,7 @@ body.bp {
     padding-bottom: 0; }
   /* line 7, ../../../../../../../.rvm/gems/ruby-1.8.7-p249/gems/compass-0.8.17/frameworks/blueprint/stylesheets/blueprint/modules/_debug.sass */
   body.bp .showgrid {
-    background: url('/images/grid.png?1269426970'); }
+    background: url('/images/grid.png?1269459821'); }
   /* line 5, ../../../../../../../.rvm/gems/ruby-1.8.7-p249/gems/compass-0.8.17/frameworks/blueprint/stylesheets/blueprint/modules/_interaction.sass */
   body.bp .error {
     padding: .8em;
@@ -1440,7 +1443,7 @@ body.bp #bd {
     visibility: hidden; }
 /* line 37, ../../../app/stylesheets/screen.sass */
 body.bp #main-content {
-  margin-top: 16px;
+  margin-top: 18px;
   *display: inline-block; }
   /* line 98, ../../../app/stylesheets/partials/_formtastic_base.sass */
   body.bp #main-content:after {
@@ -1463,7 +1466,7 @@ body.bp #sidebar {
   -webkit-border-radius: 5px;
   *display: inline-block;
   border: 1px solid #000;
-  margin-right: 16px; }
+  margin-right: 18px; }
   /* line 101, ../../../../../../../.rvm/gems/ruby-1.8.7-p249/gems/compass-0.8.17/frameworks/blueprint/stylesheets/blueprint/modules/_grid.sass */
   * html body.bp #sidebar {
     overflow-x: hidden; }
