--- a/app/stylesheets/screen.sass
+++ b/app/stylesheets/screen.sass
@@ -1,20 +1,6 @@
 @import blueprint/reset.sass
 @import partials/base.sass
 @import blueprint
-@import partials/tools.sass
-@import partials/flash.sass
-@import partials/header.sass
-@import partials/footer.sass
-@import partials/sidebar.sass
-@import partials/pagination.sass
-@import partials/results.sass
-@import partials/brands.sass
-@import partials/formtastic_base.sass
-@import partials/forms.sass
-
-
-// To generate css equivalent to the blueprint css but with your configuration applied, uncomment:
-// +blueprint
 
 +blueprint-typography("body.bp")
 
@@ -28,30 +14,16 @@ body.bp
   :background-color #DDD
   :font 13px/1.5 Helvetica,Arial,'Liberation Sans',FreeSans,sans-serif
 
-.container
-  +container
 
-body.bp
-  #bd
-    +container
-  #main-content
-    :margin-top 18px
-    +clearfix
-    
-  #sidebar
-    +column(6)
-    +inner
-    
-  #content
-    +column(18, true)
-    +inner
-  
-  .inner
-    +inner
-    
-  a, a:visited
-    :color #105CB6
-  ul
-    :margin-left 0
-    :margin-right 0
-    
+@import compass/utilities.sass
+@import partials/tools.sass
+@import partials/general.sass
+@import partials/flash.sass
+@import partials/header.sass
+@import partials/footer.sass
+@import partials/sidebar.sass
+@import partials/pagination.sass
+@import partials/results.sass
+@import partials/brands.sass
+@import partials/formtastic_base.sass
+@import partials/forms.sass
