--- a/app/views/brands/edit.html.haml
+++ b/app/views/brands/edit.html.haml
@@ -1,7 +1,5 @@
 #sidebar
   %h3 Monitored brands
-  .right
-    = link_to 'Add Brand', new_brand_path
   %ul
     - @brands.each do |brand|
       %li= link_to h(brand.name), edit_brand_path(brand)
@@ -13,19 +11,16 @@
     = link_to "Go back", brands_path, :class => "back_link"
   .clear
   
-  #settings
+  .box
     %h4 Settings
-    .span-11
+    .span-17
       - semantic_form_for @brand do |f|
         - f.inputs do
           = f.input :name
         - f.buttons do
           = f.commit_button 'Update'
-    
-    .span-6.last.right
-      = button_to "Delete brand", brand_path(@brand), :method => :delete, :class => "delete", :confirm => "Are you sure you want to delete '#{@brand.name}' brand?"
-  
-  #queries
+      
+  .box
     .span-11
       %h4 Queries
       - semantic_form_for [@brand, @query] do |f|
@@ -36,11 +31,11 @@
   
     .span-6.last
       %h4 Terms
-      %ul#terms
+      %table.terms.index
         - @brand.queries.each do |query|
-          %li
-            = h query.term
-            = link_to "Remove", brand_query_path(@brand, query), :method => :delete, :id => dom_id(query, :delete), :class => 'delete', :confirm => "Are you sure you want to delete '#{query.term}' term?"
+          %tr
+            %td= h query.term
+            %td= link_to "Remove", brand_query_path(@brand, query), :method => :delete, :id => dom_id(query, :delete), :class => 'remove', :confirm => "Are you sure you want to delete '#{query.term}' term?"
 
 
 - content_for :head do
