--- a/app/views/brands/index.html.haml
+++ b/app/views/brands/index.html.haml
@@ -1,13 +1,19 @@
 .inner
-  .right
-    = link_to 'Add a new brand', new_brand_path
-
   %h3 Monitored brands
-  %ul#brands
-    - @brands.each do |brand|
-      %li= link_to h(brand.name), edit_brand_path(brand)
-      %li
-        %ul#terms
-          - brand.queries.each do |query|
-            %li= query.term
-          
+  = link_to "Add a new brand", new_brand_path, :class => "add"
+  %table#brands.index
+    %thead
+      %tr
+        %th Brand
+        %th Terms
+        %th &nbsp;
+    %tbody
+      - @brands.each do |brand|
+        %tr
+          %td= brand
+          %td.terms= brand.queries.join(", ")
+          %td.no-wrap
+            = link_to "Manage", edit_brand_path(brand)
+            \|
+            = link_to "Remove", brand_path(brand), :method => :delete, :class => "remove", :confirm => "Are you sure you want to remove #{brand}?" 
+            
