--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,13 +1,11 @@
 .inner
-  %h3 Register for an account
+  %h3 Create a new user
   
   - semantic_form_for @user do |f|
     - f.inputs do
-      = f.hidden_field :invitation_token
-      = f.error_message_on :invitation_id
       = f.input :login
       = f.input :email
       = f.input :password
       = f.input :password_confirmation
     - f.buttons do
-      = f.commit_button "Create my account"
+      = f.commit_button "Create user"
