fixed db_populate with the latest structure (team and account); fixed failing features;

--- a/app/views/brands/index.html.haml
+++ b/app/views/brands/index.html.haml
@@ -9,7 +9,7 @@
         %th &nbsp;
     %tbody
       - @brands.each do |brand|
-        %tr
+        %tr{:id => dom_id(brand)}
           %td= brand
           %td.terms= brand.queries.join(", ")
           %td.no-wrap
