--- a/app/views/brands/edit.html.haml
+++ b/app/views/brands/edit.html.haml
@@ -33,7 +33,7 @@
       %h4 Terms
       %table.terms.index
         - @brand.queries.each do |query|
-          %tr
+          %tr{:id => dom_id(query)}
             %td= h query.term
             %td= link_to "Remove", brand_query_path(@brand, query), :method => :delete, :id => dom_id(query, :delete), :class => 'remove', :confirm => "Are you sure you want to delete '#{query.term}' term?"
 
