--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -8,4 +8,4 @@
     - f.buttons do
       = f.commit_button "Update information"
       or
-      = link_to "Cancel", brand_results_path
+      = link_to "Cancel", team_path
