--- a/app/views/brand_results/index.html.haml
+++ b/app/views/brand_results/index.html.haml
@@ -22,16 +22,6 @@
     %table#results.index
       %tbody
         - @brand_results.each do |brand_result|
-          %tr
-            %td.source
-              %a{:href => brand_result.result.url, :class => brand_result.result.source, :title => brand_result.result.source}
-                = h brand_result.result.source
-            %td.body
-              %div
-                = sanitize brand_result.result.body
-              = link_to h(brand_result.result.url), brand_result.result.url, :target => "_blank"
-              \|
-              = link_to brand_result.follow_up? ? 'Done' : 'Follow up', [:follow_up, brand_result], :method => :post
-            %td.created_at= brand_result.result.created_at.to_s(:short)
+          = render "brand_result", :object => present_brand_result(brand_result)
 
   = will_paginate @brand_results, :previous_label => '&laquo; Newer', :next_label => 'Older &raquo;'
