--- a/app/views/teams/show.html.haml
+++ b/app/views/teams/show.html.haml
@@ -1,6 +1,7 @@
 .inner
   %h3 Team members
-  = link_to "Add a new member", new_user_path, :class => "add"
+  - if current_user.account_holder?
+    = link_to "Add a new member", new_user_path, :class => "add"
   %table#members.index
     %thead
       %tr
@@ -9,10 +10,4 @@
         %th &nbsp;
     %tbody
       - @team.members.each do |member|
-        %tr{ :id => dom_id(member) }
-          %td= member
-          %td= member.email
-          %td.no-wrap
-            = link_to "Edit", edit_user_path(member)
-            \|
-            = link_to "Remove", user_path(member), :method => :delete, :class => "remove", :confirm => "Are you sure you want to remove #{member}?" 
+        = render "member", :object => present_user(member)
