finished time filter

--- a/app/stylesheets/partials/_sidebar.sass
+++ b/app/stylesheets/partials/_sidebar.sass
@@ -4,5 +4,8 @@ body.bp
       :border-bottom 1px solid #000
     ul
       +no-bullets
+      li
+        a.selected
+          :color #000000
     a
       +hover-link
