--- a/app/views/brand_results/index.html.haml
+++ b/app/views/brand_results/index.html.haml
@@ -1,20 +1,20 @@
 #sidebar
   %h3 Brands
   %ul
-    %li=link_to "All", brand_results_path(merge_search_params({:brand_id_is => nil}))
+    %li= brand_filter("All")
     - @brands.each do |brand|
-      %li= link_to brand.name, brand_results_path(merge_search_params({:brand_id_is => brand.id}))
+      %li= brand_filter(brand, brand.id)
   
   %h3 Timeframe
   %ul
-    %li= link_to "Today", brand_results_path(time_filter("today"))
-    %li= link_to "Yesterday", brand_results_path(time_filter("yesterday"))
-    %li= link_to "This Week", brand_results_path(time_filter("this week"))
-    %li= link_to "Last week", brand_results_path(time_filter("last week"))
-    %li= link_to "This month", brand_results_path(time_filter("this month"))
-    %li= link_to "Last month", brand_results_path(time_filter("last month"))
-    %li= link_to "Any time", brand_results_path(time_filter)
-
+    %li= time_filter(@search, :as => "Today", :by => :result_created_at, :between => [Time.now.beginning_of_day, Time.now.end_of_day])
+    %li= time_filter(@search, :as => "Yesterday", :by => :result_created_at, :between => [1.days.ago.beginning_of_day, 1.days.ago.end_of_day])
+    %li= time_filter(@search, :as => "This week", :by => :result_created_at, :between => [Time.now.beginning_of_week.beginning_of_day, Time.now.end_of_day ])
+    %li= time_filter(@search, :as => "Last week", :by => :result_created_at, :between => [7.days.ago.beginning_of_week.beginning_of_day, 7.days.ago.end_of_week.end_of_day ])
+    %li= time_filter(@search, :as => "This month", :by => :result_created_at, :between => [Time.now.beginning_of_month.beginning_of_day, Time.now.end_of_day ])
+    %li= time_filter(@search, :as => "Last month", :by => :result_created_at, :between => [Time.now.last_month.beginning_of_month.beginning_of_day, Time.now.last_month.end_of_month.end_of_day ])
+    %li= time_filter(@search, :as => "Any time", :by => :result_created_at)
+    
 #content
   #entries
     = page_entries_info @brand_results, :entry_name => "result"
