layout modifications: 'my account' nav tab moved to right side of the page; removed shadow; changed dotted borders to solid ones

--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -46,7 +46,7 @@ body.bp
       td
         :vertical-align top
         :padding 10px 4px 4px 4px
-        :border-bottom 1px dashed #999
+        :border-bottom 1px solid #BBB
       &:last-child
         td
           :border none
