--- a/app/stylesheets/partials/_header.sass
+++ b/app/stylesheets/partials/_header.sass
@@ -48,5 +48,8 @@ body.bp
         &.selected
           a
             :background-color #97BAFF
+        &.right
+          :float right
+          :margin-right 9px
             
             
