--- a/app/stylesheets/partials/_general.sass
+++ b/app/stylesheets/partials/_general.sass
@@ -18,6 +18,14 @@ body.bp
   
   .inner
     +inner
+    &.static
+      p, h2, h3, h4
+        :margin 10px 0 0 0
+      ul
+        :margin 0 0 0 10px
+        li
+          :list-style-position inside
+        
     
   a
     :color #105CB6
